--- a/draft/alexpub.tex
+++ b/draft/alexpub.tex
@@ -84,7 +84,7 @@ where $E_{total}$ is the total energy of the system, $\rho_{h,i}$, is the host e
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=1\linewidth]{img/tial-cell}
-	\caption{Unit cell of \rm{TiAl} (a) and $\rm{Ti_3Al}$ (b)}
+	\caption{Unit cell of \rm{TiAl} \ref (a) and $\rm{Ti_3Al}$ (b)}
 	\label{fig:tial-cell}
 \end{figure}
 
@@ -129,7 +129,7 @@ where $\vec{R_i}$ and ${\vec{R}}_{i+6}$ are the vectors corresponding to the six
 \section{Results and Discussion}\label{section:RD}
 %	/home/alex/Documents/violet/draft/img/perfect-line.pdf
 
-In order to examine deformation behavior carefully, tensile loading was applied to the model without any types of void defect. The whole tension process was saperated into four stages: Stage-\uppercase\expandafter{\romannumeral1} is typical elasttic part of the deformation, which is originated from $\epsilon = 0$ to $\epsilon = 0.092$, includeing key point 1. Stage-\uppercase\expandafter{\romannumeral2} is yield stage ranging from $\epsilon = 0.092$ to $\epsilon = 0.101$, including key points 2 to 6. In stage-\uppercase\expandafter{\romannumeral2}, the stress decreased slightly along with the increasing of strain. Stage-\uppercase\expandafter{\romannumeral3} is cracking stage and in this stage the strength of the model have beeen was detracted sharply, we can confine that the structure almost fail after the Stage-\uppercase\expandafter{\romannumeral3}. Snapshots of atoms configuration are labeled with key points number from 1 to 10, specific list of key points numbers were shown in Table. \ref{tab:key-point}.
+In order to examine deformation behavior carefully, tensile loading was applied to the model without any types of void defect. The whole tension process can be divided into four stages: Stage-\uppercase\expandafter{\romannumeral1} , the elastic stage, ranging from $\epsilon = 0$ to $\epsilon = 0.092$, including key point 1; Stage-\uppercase\expandafter{\romannumeral2}, the yield stage ranging from $\epsilon = 0.092$ to $\epsilon = 0.101$, including key points 2 to 6. In stage-\uppercase\expandafter{\romannumeral2}, the stress decreased slightly along with the increasing of strain. Stage-\uppercase\expandafter{\romannumeral3} is cracking stage and in this stage the strength of the model have been was detracted sharply, we can confine that the structure almost fail after the Stage-\uppercase\expandafter{\romannumeral3}. Snapshots of atoms configuration are labeled with key points number from 1 to 10, specific list of key points numbers were shown in Table. \ref{tab:key-point}.
 % Deformation beaviour of the $\alpha_2$ phase had $\gamma$ phase were discussed in the following subsection respectively.
  
 \begin{figure}[ht]
@@ -155,11 +155,14 @@ In order to examine deformation behavior carefully, tensile loading was applied 
 	\end{tabular} 
 	\label{tab:key-point}
 \end{table}
-
 % Due to this effect ( $\alpha_2$ + $\gamma$ ) alloys exhibit some remarkable properties that are unlike those of either constituent.
 \subsection{Deformation Mechanism of Two Phase TiAl Alloy without Void Defects}
-Deformation process of model without void under uniaxial load is shown by stress-strain curve: Fig. \ref{fig:deformation-pf} and snapshots of atom configuration at 10 key points in Fig. \ref{fig:Defect}. In Fig.\ref{fig:Defect}(a), ordered atoms in $\gamma$ phase grains have been removed, defects inside grains have been left. Similarly, the defect of $\alpha_2$ phase has been left. Following discussion concentrates on deformation phenomena that rely on the elastoplastic codeformation of the $\gamma$ and $\alpha_2$ phases and on the particular point defect situation occurring in two phase alloys.  The results show that, at elastic stage(stage 1), the structure of model have little change but the size of simulation box enlarged due to the loading. 
-Emission of dislocation and evolution of defects initiated at the end of elastic stage (key point 2). A  great number of dislocation emitted inside $\gamma$ phase stage 2, however,  the dislocation inside $\gamma$ phase was emitted after key point 6 in Fig. \ref{fig:Defect}(b). $\gamma$(TiAl) deforms by octahedral glide of ordinary dislocations with the Burgers vector b=1/2[110] and superdislocations with the Burgers vectors $b=[101]$ and $b=1/2[11\overline{2}]$. The other potential deformation mode is mechanical twinning along $1/6[11\overline{2}]{111}$.
+Deformation process of model without void under uniaxial load is shown by stress-strain curve: Fig. \ref{fig:deformation-pf} and snapshots of atom configuration at 10 key points in Fig. \ref{fig:Defect}. In Fig.\ref{fig:Defect}a, ordered atoms in $\gamma$ phase grains have been removed, defects inside grains have been left. Similarly, the defect of $\alpha_2$ phase has been left. Following discussion concentrates on deformation phenomena that rely on the elastoplastic co-deformation of the $\gamma$ and $\alpha_2$ phases and on the particular point defect situation occurring in two phase alloys.  The results show that, at elastic stage(stage 1), the structure of model have little change but the size of simulation box enlarged due to the loading. 
+Emission of dislocation and evolution of defects initiated at the end of elastic stage (key point 2). A  great number of dislocation emitted inside $\gamma$ phase stage 2, however,  the dislocation inside $\gamma$ phase was emitted after key point 6 in Fig. \ref{fig:Defect}b. $\gamma$(TiAl) deforms by octahedral glide of ordinary dislocations with the Burgers vector b=1/2[110] and superdislocations with the Burgers vectors $b=[101]$ and $b=1/2[11\overline{2}]$. The other potential deformation mode is mechanical twinning along $1/6[11\overline{2}]{111}$.
+
+\begin{equation}\label{eq:dis1}
+	[\ 0\ 1\ \overline{1}\ ] \to 1/2 [\ 1\ 1\ \overline{2}\ ]+1/2[\ \overline{1}\ 1\ 0\ ]
+\end{equation}
 
 The orientation of slip is changed because the crystallographically available slip and directions are not continuous across the interface. This may significantly reduce the Schmid factor and thus impede slip transfer. At the $\gamma/\gamma$ interfaces the orientation of the slip plan could change through a relevantly large angle of about 90 degree. Reorientation of slip is always required at the $\alpha_{2}/\gamma$ interface; the smallest angle between the corresponding slip planes ${1 1 1}_{\gamma}$ and ${ 1 0 -1 0}_{\alpha_2}$ is about 19 degree \cite{}. From Fig. \ref{fig:Defect}, of the two constituents of ($\alpha_2$+$\gamma$) alloys, the $\alpha_2$ phase is more difficult to deform. A reason for the unequal strain partitioning between the $\alpha_2$ and $\gamma$ phase is certainly the strong plastic anisotropy of the $\alpha_2$ phase. TEM examinations performed on tensile tested lamellar alloys have revealed that the limited plasticity of the $\alpha_2$ phase is mainly carried by local slip of [a]-type dislocations with the Burgers vector $b=1/3[11\overline{2}0]$ prism planes\ref{fig:Defect}, which is by far the easiest slip system in $\alpha_2$ single crystals. 
  
@@ -182,14 +185,16 @@ The orientation of slip is changed because the crystallographically available sl
 	\begin{figure}[ht]
 		\centering
 		\includegraphics[width=1\linewidth]{"img/disl-gamma"}
-		\caption{Disloaction in $\gamma$}
+		\caption{Dislocation in $\gamma$}
 		\label{fig:dis-alpha_2}
 	\end{figure}
 
 
 	
 The core of a dislocation intersecting an interface often needs to be transformed. For example, an ordinary 1/2[110] dislocation gliding in one $\gamma$ grain has to be converted in to a $[101]$ super dislocation with the double Burgers vector gliding in an adjacent $\gamma$ grain. At the $\alpha_2/\gamma$ interface the dislocations existing in the $D0_{19}$ structure have to be transformed into dislocations consistent with the $L1_0$structure. These core transformations are associated with a change of the dislocation line energy because the lengths of the Burgers vectors and the shear module are different.
-	
+\begin{equation}
+u = sin(v)
+\end{equation}	
 Dislocations crossing semi-coherent boundaries have to intersect the misfit dislocations, a process that involves elastic interaction, jog formation and the incorporation of gliding dislocations into the mismatch structure of the interface.When the slip is forced to cross $\alpha_2$ lamealla, pyramidal slip of the $\alpha_2$ phase is required, which needs an extremely high shear stress.
 
 \subsection{Evolution of spherical void in the simulation with intragranular spherical voids}
@@ -256,12 +261,12 @@ Grain and phase boundaris are obstancles to deformation process, thus the stabil
 	
 According to Schmid's law:
 	$$\tau = \sigma*m$$
-where m is the Schmid factor :
+where m is the Schmid factor :Science China MaterialsScience China Materials - Springer - Springer
 	$$ m = cos(\phi)cos(\lambda)$$
 
 \reftitle{References}
 \bibliography{ref/VIOLET-ref.bib}
-\funding{This research was funded by the National Natural Science Fundation of China (No. 51665030) and the Program for Changjiang Scholars and Innovative Research Team in Universities of the Ministry of Education of China (No. IRT-15R30) and the Doctoral Research Foundation of Lanzhou University of Technology.}
+\funding{This research was funded by the National Natural Science Foundation of China (No. 51665030) and the Program for Changjiang Scholars and Innovative Research Team in Universities of the Ministry of Education of China (No. IRT-15R30) and the Doctoral Research Foundation of Lanzhou University of Technology.}
 \end{document}
 
 
